cmake_minimum_required(VERSION 3.22)
project(Nueva_carpeta__6_)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Nueva_carpeta__6_
        cola.h
        constantes.h
        cuento.cpp
        cuento.h
        escritor.cpp
        escritor.h
        funciones.cpp
        funciones.h
        grafo.cpp
        grafo.h
        hashing.h
        historica.cpp
        historica.h
        lector2.cpp
        lector2.h
        lectura.cpp
        lectura.h
        lista.h
        lista_grafo.h
        main.cpp
        menu.cpp
        nodo.h
        nodo_grafo.h
        novela.cpp
        novela.h
        parser.cpp
        parser.h
        poema.cpp
        poema.h
        vertice_grafo.cpp
        vertice_grafo.h)
